--- a/css/mudaki.scss
+++ b/css/mudaki.scss
@@ -2,12 +2,85 @@
 @import "colors";
 @import "init";
 
+
+.lp-header-estacao {
+    overflow: hidden;
+    margin-bottom: 100px;
+
+    @media screen and (max-width: 767px) {
+        margin-bottom: 88px;
+    }
+
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+
+        @media screen and (max-width: 767px) {
+            grid-template-columns: 1fr;
+        }
+
+        .header-text {
+            justify-self: end;
+            align-self: center;
+            padding: 25px;
+
+            @media screen and (max-width: 767px) {
+                padding: 70px 25px 40px;
+            }
+
+            .main-text {
+                margin-bottom: 52px;
+
+                img {
+                    max-width: 100%;
+                }
+            }
+        }
+    }
+
+    &.estacao_solar {
+        background: $blue;
+    }
+
+    .header-image {
+        position: relative;
+
+        .floating-logo {
+            top: 57px;
+            left: 0;
+            position: absolute;
+            transform: translateX(-50%);
+
+            @media screen and (max-width: 767px) {
+                max-width: 156px;
+                top: auto;
+                bottom: 0;
+                left: auto;
+                right: 0;
+                transform: translateY(50%);
+            }
+        }
+
+        .main-image {
+            width: 100%;
+            object-fit: cover;
+        }
+
+
+        @media screen and (max-width: 767px) {
+            order: -1;
+        }
+    }
+}
+
 .lp-header {
     width: 100%;
     margin-bottom: 100px;
     background: $linear-blue;
     position: relative;
     overflow: hidden;
+
+
 
     @media screen and (max-width: 767px) {
         background-size: 150%;
@@ -70,7 +143,7 @@
     .header-text {
         justify-self: start;
 
-        
+
         @media screen and (max-width: 767px) {
             justify-self: center;
         }
@@ -152,7 +225,7 @@
             width: 80%;
 
             @media screen and (max-width: 767px) {
-                width: 90%;
+                width: 85%;
                 font-size: 33px;
                 ;
 
@@ -286,6 +359,8 @@
 
         .lp-product-card {
             flex-grow: 1;
+            flex-shrink: 1;
+            flex-basis: 0;
             text-decoration: none;
             display: flex;
             flex-direction: column;
@@ -298,7 +373,6 @@
             text-align: center;
             transition: all 0.3s;
             width: 100%;
-
             scroll-snap-align: center;
 
             &:last-child {
@@ -328,7 +402,8 @@
                 font-family: $DM-Sans;
                 font-weight: 700;
                 font-size: 20px;
-                line-height: 26px;
+                line-height: 130%;
+                overflow-wrap: anywhere;
             }
 
             &:hover {
@@ -370,7 +445,7 @@
     }
 }
 
-.lp-primary{
+.lp-primary {
     font-family: $DM-Sans;
     font-size: 18px;
     background-color: $yellow;
@@ -381,14 +456,57 @@
     text-transform: uppercase;
     font-weight: 700;
 
-    @media screen and (max-width: 1024px){
+    &.btn_center {
+        display: block;
+        margin: 0 auto;
+    }
+
+    @media screen and (max-width: 1024px) {
         padding: 8px 30px;
     }
 
-    @media screen and (max-width: 767px){
-        display: block;
-        margin: 0 auto;
+    @media screen and (max-width: 767px) {
         padding: 8px 30px;
-        margin-top: 20px;
+
+    }
+}
+
+.lp-grid-images {
+    margin-bottom: 114px;
+
+    @media screen and (max-width: 767px) {
+        margin-bottom: 88px;
+    }
+
+    .lp-images-group {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 20px;
+
+        a {
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+
+        @media screen and (max-width: 767px) {
+            grid-template-columns: 1fr;
+        }
+
+        @media screen and (min-width: 768px) {
+            .big-image {
+                grid-column-start: 1;
+                grid-column-end: 2;
+                grid-row-end: span 2;
+            }
+
+            .small-image {
+                grid-column-start: 2;
+                grid-column-end: 3;
+                grid-row-end: span 1;
+            }
+        }
+
     }
 }
