--- a/css/mudaki.scss
+++ b/css/mudaki.scss
@@ -13,7 +13,7 @@
 
     .grid {
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 0.9fr 1.1fr;
 
         @media screen and (max-width: 767px) {
             grid-template-columns: 1fr;
@@ -22,15 +22,28 @@
         .header-text {
             justify-self: end;
             align-self: center;
-            padding: 25px;
-
+            padding: 25px 25px 25px 80px;
+            
             @media screen and (max-width: 767px) {
                 padding: 70px 25px 40px;
+                width: 100%;
             }
 
             .main-text {
                 margin-bottom: 52px;
 
+                .main-text-svg{
+                    picture{
+                        width: 100%;
+                        display: flex;
+                        justify-content: end;
+
+                        @media screen and (max-width: 767px) {
+                            justify-content: center;
+                        }
+
+                    }
+                }
                 img {
                     max-width: 100%;
                 }
@@ -46,10 +59,11 @@
         position: relative;
 
         .floating-logo {
-            top: 57px;
+            top: 3%;
             left: 0;
             position: absolute;
             transform: translateX(-50%);
+            max-width: 20%;
 
             @media screen and (max-width: 767px) {
                 max-width: 156px;
@@ -64,6 +78,71 @@
         .main-image {
             width: 100%;
             object-fit: cover;
+        }
+
+
+        @media screen and (max-width: 767px) {
+            order: -1;
+        }
+    }
+}
+
+.lp-header-bola-berlim {
+    overflow: hidden;
+    margin-bottom: 100px;
+    background: $green;
+
+    @media screen and (max-width: 767px) {
+        margin-bottom: 88px;
+    }
+
+    .grid {
+        display: grid;
+        grid-template-columns: 0.6fr 0.4fr;
+
+        @media screen and (max-width: 767px) {
+            grid-template-columns: 1fr;
+        }
+
+        .header-text {
+            justify-self: start;
+            align-self: center;
+            padding: 25px 25px 25px 80px;
+            
+            @media screen and (max-width: 767px) {
+                padding: 70px 25px 40px;
+                width: 100%;
+            }
+
+            .main-text {
+                margin-bottom: 52px;
+
+                .main-text-svg{
+                    picture{
+                        width: 100%;
+                        display: flex;
+                        justify-content: start;
+
+                        @media screen and (max-width: 767px) {
+                            justify-content: center;
+                        }
+
+                    }
+                }
+                img {
+                    max-width: 100%;
+                }
+            }
+        }
+    }
+
+    .header-image {
+        position: relative;
+
+        .main-image {
+            width: 100%;
+            object-fit: cover;
+            min-height: 304px;
         }
 
 
@@ -456,9 +535,19 @@
     text-transform: uppercase;
     font-weight: 700;
 
+    &.green{
+        background-color: $green;
+    }
+
+    &.primary{
+        background-color: $primary;
+    }
+
     &.btn_center {
-        display: block;
-        margin: 0 auto;
+        @media screen and (max-width: 767px) {
+            display: block;
+            margin: 0 auto;
+        }
     }
 
     @media screen and (max-width: 1024px) {
@@ -484,6 +573,10 @@
         gap: 20px;
 
         a {
+            transition: all 0.3s;
+            &:hover{
+                transform: scale(1.04);
+            }
             img {
                 width: 100%;
                 height: 100%;
