--- a/css/mudaki.css
+++ b/css/mudaki.css
@@ -161,7 +161,7 @@ p {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  padding: 25px 25px 25px 80px;
+  padding: 70px 65px 50px;
 }
 
 @media screen and (max-width: 767px) {
@@ -203,17 +203,10 @@ p {
 
 .lp-header-bola-berlim .header-image .main-image {
   width: 100%;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   min-height: 304px;
-}
-
-@media screen and (max-width: 767px) {
-  .lp-header-bola-berlim .header-image {
-    -webkit-box-ordinal-group: 0;
-        -ms-flex-order: -1;
-            order: -1;
-  }
 }
 
 .lp-header {
