--- a/css/mudaki.scss
+++ b/css/mudaki.scss
@@ -107,7 +107,7 @@
         .header-text {
             justify-self: start;
             align-self: center;
-            padding: 25px 25px 25px 80px;
+            padding: 70px 65px 50px;
             
             @media screen and (max-width: 767px) {
                 padding: 70px 25px 40px;
@@ -141,13 +141,9 @@
 
         .main-image {
             width: 100%;
+            height: 100%;
             object-fit: cover;
             min-height: 304px;
-        }
-
-
-        @media screen and (max-width: 767px) {
-            order: -1;
         }
     }
 }
