--- a/css/_init.scss
+++ b/css/_init.scss
@@ -1,18 +1,26 @@
-*, *::before, *::after{
+*,
+*::before,
+*::after {
     box-sizing: border-box;
 }
 
-body, html{
+body,
+html {
     padding: 0;
     margin: 0;
 }
 
-h1,h2,h3,h4,h5,h6{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin: 0;
     padding: 0;
     font-family: $DM-Sans;
 }
 
-p{
+p {
     font-family: $DM-Sans;
 }
