--- a/css/mudaki.scss
+++ b/css/mudaki.scss
@@ -264,7 +264,7 @@
     background: $primary;
     padding: 62px 62px 45px;
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     color: $white;
     margin-bottom: 103px;
     border-radius: 15px;
@@ -275,49 +275,57 @@
         align-items: stretch;
         max-width: calc(100% - 40px);
         flex-direction: column;
+        justify-content: center;
     }
 
     .lp-newsletter-title {
-        width: clamp(200px, 100%, 345px);
-        position: relative;
+        flex-grow: 1;
+        flex-shrink: 0;
 
-        svg {
-            position: absolute;
-            top: -70px;
-            right: 0px;
+        .title {
+            width: clamp(200px, 100%, 345px);
+            position: relative;
 
-            @media screen and (max-width: 767px) {
-                max-width: 82px;
+            svg {
+                position: absolute;
                 top: -70px;
-                right: -33px;
+                right: 0px;
 
+                @media screen and (max-width: 767px) {
+                    max-width: 82px;
+                    top: -70px;
+                    right: -33px;
+
+                }
             }
-        }
 
-        h4 {
-            font-weight: 700;
-            font-size: 38px;
-            line-height: 110%;
-            color: $yellow;
-            width: 80%;
+            h4 {
+                font-weight: 700;
+                font-size: 38px;
+                line-height: 110%;
+                color: $yellow;
+                width: 80%;
 
-            @media screen and (max-width: 767px) {
-                width: 85%;
-                font-size: 33px;
-                ;
+                @media screen and (max-width: 767px) {
+                    width: 85%;
+                    font-size: 33px;
+                    ;
 
+                }
             }
+
+            p {
+                font-size: 18px;
+                line-height: 23px;
+            }
+
         }
 
-        p {
-            font-size: 18px;
-            line-height: 23px;
-        }
     }
 
     .lp-newsletter-form {
         flex-grow: 1;
-
+        flex-shrink: 0;
 
         form {
             display: flex;
