--- a/css/mudaki.css
+++ b/css/mudaki.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
 *,
 *::before,
 *::after {
@@ -288,7 +287,7 @@ p {
 
 .lp-header::after {
 	content: "";
-	background: url(../assets/mudaki/waves_slice.svg);
+	background: url(https://s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/waves_slice.svg);
 	background-size: contain;
 	position: absolute;
 	bottom: 0;
