--- a/css/syles_backup.scss
+++ b/css/syles_backup.scss
@@ -2,13 +2,99 @@
 @import "colors";
 @import "init";
 
-.lp-header-regresso {
+
+.lp-header-estacao {
     overflow: hidden;
-    margin-bottom: 50px;
-    background: $yellow;
+    margin-bottom: 100px;
 
     @media screen and (max-width: 767px) {
-        margin-bottom: 40px;
+        margin-bottom: 88px;
+    }
+
+    .grid {
+        display: grid;
+        grid-template-columns: 0.9fr 1.1fr;
+
+        @media screen and (max-width: 767px) {
+            grid-template-columns: 1fr;
+        }
+
+        .header-text {
+            justify-self: end;
+            align-self: center;
+            padding: 25px 25px 25px 80px;
+
+            @media screen and (max-width: 767px) {
+                padding: 70px 25px 40px;
+                width: 100%;
+            }
+
+            .main-text {
+                margin-bottom: 52px;
+
+                .main-text-svg {
+                    picture {
+                        width: 100%;
+                        display: flex;
+                        justify-content: end;
+
+                        @media screen and (max-width: 767px) {
+                            justify-content: center;
+                        }
+
+                    }
+                }
+
+                img {
+                    max-width: 100%;
+                }
+            }
+        }
+    }
+
+    &.estacao_solar {
+        background: $blue;
+    }
+
+    .header-image {
+        position: relative;
+
+        .floating-logo {
+            top: 3%;
+            left: 0;
+            position: absolute;
+            transform: translateX(-50%);
+            max-width: 20%;
+
+            @media screen and (max-width: 767px) {
+                max-width: 156px;
+                top: auto;
+                bottom: 0;
+                left: auto;
+                right: 0;
+                transform: translateY(50%);
+            }
+        }
+
+        .main-image {
+            width: 100%;
+            object-fit: cover;
+        }
+
+
+        @media screen and (max-width: 767px) {
+            order: -1;
+        }
+    }
+}
+
+.lp-header-bola-berlim {
+    overflow: hidden;
+    margin-bottom: 100px;
+    background: $green;
+
+    @media screen and (max-width: 767px) {
+        margin-bottom: 88px;
     }
 
     .grid {
@@ -64,10 +150,114 @@
     }
 }
 
+.lp-header {
+    width: 100%;
+    margin-bottom: 100px;
+    background: $linear-blue;
+    position: relative;
+    overflow: hidden;
+
+
+
+    @media screen and (max-width: 767px) {
+        background-size: 150%;
+        background-position: left bottom;
+    }
+
+
+    .grid {
+        display: grid;
+        align-items: center;
+        grid-template-columns: 1fr 1fr;
+        max-width: 1440px;
+        // min-height: 689px;
+        margin: 0 auto;
+
+
+        @media screen and (max-width: 767px) {
+            grid-template-columns: 1fr;
+        }
+
+    }
+
+
+    .header-image {
+        // background: url(../assets/mudaki/header_Imaage_mudaki.jpg);
+        // background-size: contain;
+        // background-position: bottom;
+        height: 100%;
+        // background-repeat: no-repeat;
+
+        @media screen and (max-width: 767px) {
+            order: 2;
+        }
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
+    }
+
+    &::after {
+        content: '';
+        background: url(https: //s1.kuantokusta.pt/img_upload/Repository/paginas-publicas/campanha-praia-2022/mudaki/waves_slice.svg);
+        background-size: contain;
+        position: absolute;
+        bottom: 0;
+        left: -20px;
+        width: 120%;
+        height: 15%;
+        mix-blend-mode: multiply;
+    }
+
+
+    @media screen and (max-width: 767px) {
+        margin-bottom: 88px;
+        flex-direction: column;
+    }
+
+    .header-text {
+        justify-self: start;
+
+
+        @media screen and (max-width: 767px) {
+            justify-self: center;
+        }
+
+
+        .main-text {
+            display: block;
+            position: relative;
+
+
+            @media screen and (max-width: 767px) {
+                padding: 25px 15px 0;
+            }
+
+            .main-text-svg {
+                .text-svg {
+                    margin: 0 auto;
+                    max-width: 100%;
+                }
+
+                .logo-svg {
+                    position: absolute;
+                    top: -160px;
+                    right: 0;
+                }
+            }
+
+        }
+    }
+
+}
+
 .lp-content {
-    max-width: 1140px;
+    max-width: 1108px;
     width: 100%;
     margin: 0 auto;
+    padding: 20px;
 }
 
 .lp-newsletter {
@@ -83,6 +273,7 @@
     @media screen and (max-width: 767px) {
         padding: 62px 32px 38px;
         align-items: stretch;
+        max-width: calc(100% - 40px);
         flex-direction: column;
         justify-content: center;
     }
@@ -97,13 +288,13 @@
 
             svg {
                 position: absolute;
-                top: -30px;
-                right: -15px;
+                top: -70px;
+                right: 0px;
 
                 @media screen and (max-width: 767px) {
                     max-width: 82px;
-                    top: -35px;
-                    right: 0px;
+                    top: -70px;
+                    right: -33px;
 
                 }
             }
@@ -116,8 +307,7 @@
                 width: 80%;
 
                 @media screen and (max-width: 767px) {
-                    width: 100%;
-                    padding-right: 92px;
+                    width: 85%;
                     font-size: 33px;
                     ;
 
@@ -226,116 +416,11 @@
                 }
             }
         }
-
-        div {
-            img {
-                width: 100%;
-                transition: all 0.3s;
-            }
-
-            &:hover {
-                img {
-                    transform: scale(1.04);
-                }
-            }
-        }
-    }
-}
-
-.lp-flickit {
-    padding: 0 0 0 20px;
-    margin-bottom: 140px;
-
-    @media screen and (max-width: 767px) {
-        margin-bottom: 88px;
-    }
-
-    .flickity-prev-next-button {
-        background: $white;
-        filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.2));
-    }
-
-    .flickity-prev-next-button.previous {
-        left: -20px;
-
-        @media screen and (max-width: 1200px) {
-            left: 15px;
-        }
-    }
-
-    .flickity-prev-next-button.next {
-        right: -20px;
-
-        @media screen and (max-width: 1200px) {
-            right: 15px;
-        }
-    }
-
-    .carrousel {
-        width: 100%;
-
-        .lp-product-card {
-            text-decoration: none;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-between;
-            background: $card-background;
-            padding: 40px 16px;
-            border-radius: 15px;
-            gap: 24px;
-            text-align: center;
-            transition: all 0.3s;
-            width: 100%;
-            scroll-snap-align: center;
-            max-width: calc(25% - 10px);
-            margin: 0 10px;
-
-            @media screen and (max-width: 767px) {
-                min-height: 360px;
-                min-width: 262px;
-            }
-
-            &:last-child {
-
-                @media screen and (max-width: 767px) {
-                    margin-right: 20px;
-                }
-            }
-
-
-            .lp-product-image {
-                flex-grow: 1;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-
-                img {
-                    min-height: 150px;
-                    width: 100%;
-                    mix-blend-mode: multiply;
-                    max-height: 180px;
-                }
-            }
-
-            h4 {
-                color: $black;
-                font-family: $DM-Sans;
-                font-weight: 700;
-                font-size: 20px;
-                line-height: 130%;
-                overflow-wrap: anywhere;
-                min-height: 52px;
-            }
-
-            &:hover {
-                transform: scale(1.1);
-            }
-        }
     }
 }
 
 .lp-product-carrousel {
+    padding: 0 0 0 20px;
     margin-bottom: 140px;
 
     @media screen and (max-width: 767px) {
@@ -346,7 +431,7 @@
         width: 100%;
         display: flex;
         gap: 20px;
-        padding: 20px 10px;
+        padding: 20px;
         overflow-y: auto;
         scroll-snap-type: x mandatory;
 
@@ -376,10 +461,7 @@
             scroll-snap-align: center;
 
             &:last-child {
-
-                @media screen and (max-width: 767px) {
-                    margin-right: 20px;
-                }
+                margin-right: 20px;
             }
 
             @media screen and (max-width: 767px) {
@@ -496,18 +578,17 @@
         grid-template-columns: 1fr 1fr;
         gap: 20px;
 
-        a,
-        div {
+        a {
             transition: all 0.3s;
 
             &:hover {
                 transform: scale(1.04);
             }
-        }
 
-        img {
-            width: 100%;
-            height: 100%;
+            img {
+                width: 100%;
+                height: 100%;
+            }
         }
 
         @media screen and (max-width: 767px) {
@@ -525,146 +606,8 @@
                 grid-column-start: 2;
                 grid-column-end: 3;
                 grid-row-end: span 1;
-
-                &.first-row {
-                    grid-column-start: 1;
-                    grid-column-end: 2;
-                }
             }
         }
 
-    }
-}
-
-.lp-big-cta {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    grid-gap: 32px;
-    align-items: center;
-    margin-bottom: 114px;
-
-    @media screen and (max-width: 767px) {}
-
-    @media screen and (max-width: 767px) {
-        grid-template-columns: 1fr;
-        margin-bottom: 88px;
-    }
-
-    .main-text {
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-
-        h1 {
-            font-size: 40px;
-            font-weight: 700;
-
-            @media screen and (max-width: 767px) {
-                font-size: 40px;
-            }
-        }
-
-        a {
-            align-self: flex-start;
-            padding: 16px 86px;
-            text-decoration: none;
-        }
-    }
-
-    .image {
-        img {
-            width: 100%;
-        }
-    }
-}
-
-.lp-image {
-    margin-bottom: 80px;
-
-    @media screen and (max-width: 767px) {
-        margin-bottom: 60px;
-    }
-
-    picture {
-        width: 100%;
-
-        img {
-            width: 100%;
-        }
-    }
-}
-
-.p-relative {
-    position: relative;
-}
-
-.lp-floating-links {
-    position: absolute;
-    left: 35px;
-    top: 15%;
-    display: flex;
-    flex-direction: column;
-    gap: 26px;
-
-    @media screen and (max-width: 767px) {
-        top: 54px;
-        gap: 20px;
-    }
-
-    &.t-63 {
-        top: 63px;
-        left: 54px;
-
-        @media screen and (max-width: 767px) {
-            top: 35px;
-            left: 54px;
-        }
-
-        @media screen and (max-width: 400px) {
-            left: 35px;
-
-        }
-
-        a {
-            font-size: 24px;
-            line-height: 31px;
-
-            @media screen and (max-width: 767px) {
-                font-size: 20px;
-                line-height: 24px;
-            }
-
-            @media screen and (max-width: 400px) {
-                max-width: 13ch;
-
-            }
-        }
-    }
-
-    a {
-        font-size: 20px;
-        font-family: $DM-Sans;
-        font-weight: 700;
-        color: $black;
-        text-decoration: underline !important;
-
-        @media screen and (max-width: 767px) {
-            font-size: 18px;
-        }
-
-        &:hover {
-            text-decoration: none !important;
-        }
-
-        &.btn {
-            font-size: 18px;
-            padding: 10px 36px;
-            text-decoration: none !important;
-
-            @media screen and (max-width: 767px) {
-                font-size: 16px;
-                padding: 8px 24px;
-            }
-        }
     }
 }
